<resources>
    <string name="app_name">FrutiMarket</string>
    <string name="intro_tv_skip">skip</string>
    <string name="intro_button">next</string>
    <string name="e_shopping">E Shopping</string>
    <string name="explore_top_organic"><![CDATA[Explore  top organic fruits & grab them]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliver_on_the_way">Delivery on the way</string>
    <string name="get_your_order">Get your order by speed delivery</string>
    <string name="deliver_arrived">Delivery Arrived</string>
    <string name="order_is_arrived">Order is arrived at your Place</string>
    <string name="btn_login">login</string>
    <string name="et_password_hint">Enter your Password</string>
    <string name="et_email_hint">Enter your Email</string>
    <string name="or">or</string>
    <string name="tv_sign_up">Create new account</string>
    <string name="et_name_hint_register">Enter your name</string>
    <string name="btn_register">register</string>
    <string name="already_have_account">already have account</string>
    <string name="tv_login">login</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="tv_gender">Gender</string>
    <string name="nav_home">Home</string>
    <string name="nav_fav">favourite</string>
    <string name="nav_cart">cart</string>
    <string name="nav_account">account</string>
</resources>