<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_image"
        android:layout_marginTop="@dimen/_90sdp"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_email_hint"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/et_login_shape"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins"
        android:textColor="#393939"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/et_login_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="#393939"
        android:textSize="@dimen/_12ssp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/intro_button_shape"
        android:text="@string/btn_login"
        android:textSize="@dimen/_14ssp"
        android:textColor="#FFFFFF"
        android:padding="@dimen/_5sdp"
        android:fontFamily="@font/poppins_medium"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/or"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/poppins"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#69A03A"
            android:text="@string/tv_sign_up"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/poppins_semibold"/>
    </LinearLayout>

</LinearLayout>